new basement graphix

--- a/client/index.html
+++ b/client/index.html
@@ -75,7 +75,7 @@
 
                     <!--BASEMENT FLOORS-->
                     <div class="basement" ng-repeat="floor in registry.currentStack.basement.floors">
-                        <div class="floorData">{{floor.bid.name}}</div>
+                        <div class="levelData">{{floor.bid.name}}</div>
                         <!--<div class="stackOptions" ng-show="registry.currentStack">-->
                             <!--<button class="addFloor" ng-click="addRoom(floor)">Add Room</button>-->
                         <!--</div>-->
