Added logistics pipes and supporting graphics.

--- a/client/index.html
+++ b/client/index.html
@@ -64,8 +64,38 @@
                                     {{name}}: {{resource}}
                                 </div>
                             </div>
-
+                            <div class="roomLogistics">
+                                <div class="roomLogiConnLeft">
+                                    <div class="logiItemsDuct" ng-click="testClick()"></div>
+                                    <div class="logiBitsDuct"></div>
+                                    <div class="logiEnergyDuct"></div>
+                                    <div class="logiWaterDuct"></div>
+                                    <div class="logiHeatDuct"></div>
+                                </div>
+                                <div class="roomLogiConnTop">
+                                    <div class="logiItemsDuct"></div><!--
+                                    --><div class="logiBitsDuct"></div><!--
+                                    --><div class="logiEnergyDuct"></div><!--
+                                    --><div class="logiWaterDuct"></div><!--
+                                    --><div class="logiHeatDuct"></div>
+                                </div>
+                                <div class="roomLogiConnRight">
+                                    <div class="logiItemsDuct"></div>
+                                    <div class="logiBitsDuct"></div>
+                                    <div class="logiEnergyDuct"></div>
+                                    <div class="logiWaterDuct"></div>
+                                    <div class="logiHeatDuct"></div>
+                                </div>
+                                <div class="roomLogiConnBottom">
+                                    <div class="logiItemsDuct"></div><!--
+                                    --><div class="logiBitsDuct"></div><!--
+                                    --><div class="logiEnergyDuct"></div><!--
+                                    --><div class="logiWaterDuct"></div><!--
+                                    --><div class="logiHeatDuct"></div>
+                                </div>
+                            </div>
                         </div>
+
                     </div>
 
                     <div class="foundation">Foundation</div>
