--- a/client/index.html
+++ b/client/index.html
@@ -66,32 +66,32 @@
                             </div>
                             <div class="roomLogistics">
                                 <div class="roomLogiConnLeft">
-                                    <div class="logiItemsDuct" ng-click="testClick()"></div>
-                                    <div class="logiBitsDuct"></div>
-                                    <div class="logiEnergyDuct"></div>
-                                    <div class="logiWaterDuct"></div>
-                                    <div class="logiHeatDuct"></div>
+                                    <div class="logiItemsDuct" ng-class="isActive('item','left')" ng-click="testClick()"></div>
+                                    <div class="logiBitsDuct" ng-class="isActive('bit','left')" ng-click="testClick()"></div>
+                                    <div class="logiEnergyDuct" ng-class="isActive('power','left')" ng-click="testClick()"></div>
+                                    <div class="logiWaterDuct" ng-class="isActive('coolant','left')" ng-click="testClick()"></div>
+                                    <div class="logiHeatDuct" ng-class="isActive('heat','left')" ng-click="testClick()"></div>
                                 </div>
                                 <div class="roomLogiConnTop">
-                                    <div class="logiItemsDuct"></div><!--
-                                    --><div class="logiBitsDuct"></div><!--
-                                    --><div class="logiEnergyDuct"></div><!--
-                                    --><div class="logiWaterDuct"></div><!--
-                                    --><div class="logiHeatDuct"></div>
+                                    <div class="logiItemsDuct" ng-class="isActive('item','up')" ng-click="testClick()"></div><!--
+                                    --><div class="logiBitsDuct" ng-class="isActive('bit','up')" ng-click="testClick()"></div><!--
+                                    --><div class="logiEnergyDuct" ng-class="isActive('power','up')" ng-click="testClick()"></div><!--
+                                    --><div class="logiWaterDuct" ng-class="isActive('coolant','up')" ng-click="testClick()"></div><!--
+                                    --><div class="logiHeatDuct" ng-class="isActive('heat','up')" ng-click="testClick()"></div>
                                 </div>
                                 <div class="roomLogiConnRight">
-                                    <div class="logiItemsDuct"></div>
-                                    <div class="logiBitsDuct"></div>
-                                    <div class="logiEnergyDuct"></div>
-                                    <div class="logiWaterDuct"></div>
-                                    <div class="logiHeatDuct"></div>
+                                    <div class="logiItemsDuct" ng-class="isActive('item','right')" ng-click="testClick()"></div>
+                                    <div class="logiBitsDuct" ng-class="isActive('bit','right')" ng-click="testClick()"></div>
+                                    <div class="logiEnergyDuct" ng-class="isActive('power','right')" ng-click="testClick()"></div>
+                                    <div class="logiWaterDuct" ng-class="isActive('coolant','right')" ng-click="testClick()"></div>
+                                    <div class="logiHeatDuct" ng-class="isActive('heat','right')" ng-click="testClick()"></div>
                                 </div>
                                 <div class="roomLogiConnBottom">
-                                    <div class="logiItemsDuct"></div><!--
-                                    --><div class="logiBitsDuct"></div><!--
-                                    --><div class="logiEnergyDuct"></div><!--
-                                    --><div class="logiWaterDuct"></div><!--
-                                    --><div class="logiHeatDuct"></div>
+                                    <div class="logiItemsDuct" ng-class="isActive('item','down')" ng-click="testClick()"></div><!--
+                                    --><div class="logiBitsDuct" ng-class="isActive('bit','down')" ng-click="testClick()"></div><!--
+                                    --><div class="logiEnergyDuct" ng-class="isActive('power','down')" ng-click="testClick()"></div><!--
+                                    --><div class="logiWaterDuct" ng-class="isActive('coolant','down')" ng-click="testClick()"></div><!--
+                                    --><div class="logiHeatDuct" ng-class="isActive('heat','down')" ng-click="testClick()"></div>
                                 </div>
                             </div>
                         </div>
