--- a/client/index.html
+++ b/client/index.html
@@ -54,10 +54,13 @@
                         <!--UPPER ROOMS-->
                         <div class="room" ng-repeat="room in floor.rooms">
                             <div class="roomTitle">{{room.bid.name}} - {{room.roomType}}</div>
-                            <button class="roomButton roomTypeButton">Type</button>
-                            <div class="roomChangeButtons">CHANGE TO:
+                            <!--<button class="roomButton roomTypeButton">Type</button>-->
+                            <div class="roomChangeButtons">
+                                <!--<span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>:-->
                                 <button class="roomButton" ng-click="changeRoomType(room,'core')">Core</button>
                                 <button class="roomButton" ng-click="changeRoomType(room,'powerCell')">Power Cell</button>
+                                <button class="roomButton" ng-click="changeRoomType(room,'coolantTank')">Coolant Tank</button>
+                                <button class="roomButton" ng-click="changeRoomType(room,'bitBank')">Bit Bank</button>
                             </div>
                             <div class="roomStats">
                                 <div class="roomStatBox" ng-repeat="(name,resource) in room.resources">
@@ -67,28 +70,28 @@
                             <div class="roomLogistics">
                                 <div class="roomLogiConnLeft">
                                     <div class="logiItemsDuct" ng-class="isActive('item','left')" ng-click="testClick()"></div>
-                                    <div class="logiBitsDuct" ng-class="isActive('bit','left')" ng-click="testClick()"></div>
+                                    <div class="logiBitsDuct" ng-class="isActive('bits','left')" ng-click="testClick()"></div>
                                     <div class="logiEnergyDuct" ng-class="isActive('power','left')" ng-click="testClick()"></div>
                                     <div class="logiWaterDuct" ng-class="isActive('coolant','left')" ng-click="testClick()"></div>
                                     <div class="logiHeatDuct" ng-class="isActive('heat','left')" ng-click="testClick()"></div>
                                 </div>
                                 <div class="roomLogiConnTop">
                                     <div class="logiItemsDuct" ng-class="isActive('item','up')" ng-click="testClick()"></div><!--
-                                    --><div class="logiBitsDuct" ng-class="isActive('bit','up')" ng-click="testClick()"></div><!--
+                                    --><div class="logiBitsDuct" ng-class="isActive('bits','up')" ng-click="testClick()"></div><!--
                                     --><div class="logiEnergyDuct" ng-class="isActive('power','up')" ng-click="testClick()"></div><!--
                                     --><div class="logiWaterDuct" ng-class="isActive('coolant','up')" ng-click="testClick()"></div><!--
                                     --><div class="logiHeatDuct" ng-class="isActive('heat','up')" ng-click="testClick()"></div>
                                 </div>
                                 <div class="roomLogiConnRight">
                                     <div class="logiItemsDuct" ng-class="isActive('item','right')" ng-click="testClick()"></div>
-                                    <div class="logiBitsDuct" ng-class="isActive('bit','right')" ng-click="testClick()"></div>
+                                    <div class="logiBitsDuct" ng-class="isActive('bits','right')" ng-click="testClick()"></div>
                                     <div class="logiEnergyDuct" ng-class="isActive('power','right')" ng-click="testClick()"></div>
                                     <div class="logiWaterDuct" ng-class="isActive('coolant','right')" ng-click="testClick()"></div>
                                     <div class="logiHeatDuct" ng-class="isActive('heat','right')" ng-click="testClick()"></div>
                                 </div>
                                 <div class="roomLogiConnBottom">
                                     <div class="logiItemsDuct" ng-class="isActive('item','down')" ng-click="testClick()"></div><!--
-                                    --><div class="logiBitsDuct" ng-class="isActive('bit','down')" ng-click="testClick()"></div><!--
+                                    --><div class="logiBitsDuct" ng-class="isActive('bits','down')" ng-click="testClick()"></div><!--
                                     --><div class="logiEnergyDuct" ng-class="isActive('power','down')" ng-click="testClick()"></div><!--
                                     --><div class="logiWaterDuct" ng-class="isActive('coolant','down')" ng-click="testClick()"></div><!--
                                     --><div class="logiHeatDuct" ng-class="isActive('heat','down')" ng-click="testClick()"></div>
