Updates to graphics in basement.

--- a/client/index.html
+++ b/client/index.html
@@ -143,18 +143,18 @@
                             </button>
                         </div>
                         <div class="room-add" ng-click="addRoom(floor)" ng-show="registry.currentStack">
-                            <span class="room-add-text">Survey Section</span>
+                            <span class="room-add-text">Add Room</span>
                             <!--<div class="stackOptions" ng-show="registry.currentStack">-->
                                 <!--<button class="addFloor" ng-click="addRoom(floor)">Add Room</button>-->
                             <!--</div>-->
                         </div>
                         <!-- CK - CLASS STATE FOR ROOM AFTER DECRYPTION -->
-                        <div class="room basement-room basementDecrypted" ng-click="addRoom(floor)" ng-show="registry.currentStack">
-                            <span class="room-add-text">Survey Section</span>
-                            <!--<div class="stackOptions" ng-show="registry.currentStack">-->
-                            <!--<button class="addFloor" ng-click="addRoom(floor)">Add Room</button>-->
-                            <!--</div>-->
-                        </div>
+                        <!--<div class="room basement-room basementDecrypted" ng-click="addRoom(floor)" ng-show="registry.currentStack">-->
+                            <!--<span class="room-add-text">Add Room</span>-->
+                            <!--&lt;!&ndash;<div class="stackOptions" ng-show="registry.currentStack">&ndash;&gt;-->
+                            <!--&lt;!&ndash;<button class="addFloor" ng-click="addRoom(floor)">Add Room</button>&ndash;&gt;-->
+                            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                        <!--</div>-->
                     </div>
                     <div class="stackOptions" ng-show="registry.currentStack">
                         <button class="addLevel"
