Added logistics pipes UI to basement rooms.

--- a/client/index.html
+++ b/client/index.html
@@ -141,6 +141,36 @@
                                     {{globals.operator.handCard}}
                                 </span>
                             </button>
+                            <div class="roomLogistics">
+                                <div class="roomLogiConnLeft">
+                                    <div class="logiItemsDuct" ng-class="isActive('item','left')" ng-click="testClick()"></div>
+                                    <div class="logiBitsDuct" ng-class="isActive('bits','left')" ng-click="testClick()"></div>
+                                    <div class="logiEnergyDuct" ng-class="isActive('power','left')" ng-click="testClick()"></div>
+                                    <div class="logiWaterDuct" ng-class="isActive('coolant','left')" ng-click="testClick()"></div>
+                                    <div class="logiHeatDuct" ng-class="isActive('heat','left')" ng-click="testClick()"></div>
+                                </div>
+                                <div class="roomLogiConnTop">
+                                    <div class="logiItemsDuct" ng-class="isActive('item','up')" ng-click="testClick()"></div><!--
+                                    --><div class="logiBitsDuct" ng-class="isActive('bits','up')" ng-click="testClick()"></div><!--
+                                    --><div class="logiEnergyDuct" ng-class="isActive('power','up')" ng-click="testClick()"></div><!--
+                                    --><div class="logiWaterDuct" ng-class="isActive('coolant','up')" ng-click="testClick()"></div><!--
+                                    --><div class="logiHeatDuct" ng-class="isActive('heat','up')" ng-click="testClick()"></div>
+                                </div>
+                                <div class="roomLogiConnRight">
+                                    <div class="logiItemsDuct" ng-class="isActive('item','right')" ng-click="testClick()"></div>
+                                    <div class="logiBitsDuct" ng-class="isActive('bits','right')" ng-click="testClick()"></div>
+                                    <div class="logiEnergyDuct" ng-class="isActive('power','right')" ng-click="testClick()"></div>
+                                    <div class="logiWaterDuct" ng-class="isActive('coolant','right')" ng-click="testClick()"></div>
+                                    <div class="logiHeatDuct" ng-class="isActive('heat','right')" ng-click="testClick()"></div>
+                                </div>
+                                <div class="roomLogiConnBottom">
+                                    <div class="logiItemsDuct" ng-class="isActive('item','down')" ng-click="testClick()"></div><!--
+                                    --><div class="logiBitsDuct" ng-class="isActive('bits','down')" ng-click="testClick()"></div><!--
+                                    --><div class="logiEnergyDuct" ng-class="isActive('power','down')" ng-click="testClick()"></div><!--
+                                    --><div class="logiWaterDuct" ng-class="isActive('coolant','down')" ng-click="testClick()"></div><!--
+                                    --><div class="logiHeatDuct" ng-class="isActive('heat','down')" ng-click="testClick()"></div>
+                                </div>
+                            </div>
                         </div>
                         <div class="room-add" ng-click="addRoom(floor)" ng-show="registry.currentStack">
                             <span class="room-add-text">Add Room</span>
